<resources>
	<string name="about">About</string>
	<string name="about_activity_about">Classy Games was developed by a team of five students attending Southeastern Louisiana University.</string>
	<string name="about_activity_title">About</string>
	<string name="admob_publisher_id">a150aef7572192d</string>
	<string name="admob_test_devices">TEST_EMULATOR, a30ce768, 015d4a82455c0801, HT05ZHJ03545, HT045HJ02140</string>
	<string name="app_name">Classy Games</string>
	<string name="cancel">Cancel</string>
	<string name="checkers_game_fragment_title">Checkers with</string>
	<string name="checkers_game_fragment_loading_text">Loading Checkers game against %1$s&#8230;</string>
	<string name="chess_game_fragment_title">Chess with</string>
	<string name="chess_game_fragment_loading_text">Loading Chess game against %1$s&#8230;</string>
	<string name="com_charlesmadere_android_classygames_settings_game">com.charlesmadere.android.classygames.settings.GAME</string>
	<string name="com_charlesmadere_android_classygames_settings_miscellaneous">com.charlesmadere.android.classygames.settings.MISCELLANEOUS</string>
	<string name="confirm_game_fragment_data_error">Error when trying to store the data for the Facebook friend that you selected.</string>
	<string name="confirm_game_fragment_button_confirm">Start Game!</string>
	<string name="confirm_game_fragment_button_deny">Nevermind&#8230;</string>
	<string name="confirm_game_fragment_description_text">Are you sure that you want to start a game with %1$s?</string>
	<string name="confirm_game_fragment_friend_profile_picture_description">Friend\'s Picture</string>
	<string name="empty_game_fragment_imageview_placeholder">No game is currently loaded!</string>
	<string name="empty_game_fragment_title">Empty Game</string>
	<string name="facebook_app_id">324400870964487</string>
	<string name="forfeit_game">Forfeit Game</string>
	<string name="friends_list_fragment_cancelled_text">Cancelled loading your Facebook Friends List!</string>
	<string name="friends_list_fragment_listview_item_picture_description">Friend\'s Picture</string>
	<string name="friends_list_fragment_loading_text">Loading your Facebook Friends List&#8230;</string>
	<string name="friends_list_fragment_no_friends">Sorry, but you don\'t seem to have any Facebook friends. In order to play Classy Games you must have some Facebook friends.</string>
	<string name="friends_list_fragment_title">New Game</string>
	<string name="game">Game</string>
	<string name="game_fragment_activity_game_data_error">Couldn\'t create a game as malformed data was detected!</string>
	<string name="game_fragment_board_x0y0">0, 0</string>
	<string name="game_fragment_board_x1y0">1, 0</string>
	<string name="game_fragment_board_x2y0">2, 0</string>
	<string name="game_fragment_board_x3y0">3, 0</string>
	<string name="game_fragment_board_x4y0">4, 0</string>
	<string name="game_fragment_board_x5y0">5, 0</string>
	<string name="game_fragment_board_x6y0">6, 0</string>
	<string name="game_fragment_board_x7y0">7, 0</string>
	<string name="game_fragment_board_x0y1">0, 1</string>
	<string name="game_fragment_board_x1y1">1, 1</string>
	<string name="game_fragment_board_x2y1">2, 1</string>
	<string name="game_fragment_board_x3y1">3, 1</string>
	<string name="game_fragment_board_x4y1">4, 1</string>
	<string name="game_fragment_board_x5y1">5, 1</string>
	<string name="game_fragment_board_x6y1">6, 1</string>
	<string name="game_fragment_board_x7y1">7, 1</string>
	<string name="game_fragment_board_x0y2">0, 2</string>
	<string name="game_fragment_board_x1y2">1, 2</string>
	<string name="game_fragment_board_x2y2">2, 2</string>
	<string name="game_fragment_board_x3y2">3, 2</string>
	<string name="game_fragment_board_x4y2">4, 2</string>
	<string name="game_fragment_board_x5y2">5, 2</string>
	<string name="game_fragment_board_x6y2">6, 2</string>
	<string name="game_fragment_board_x7y2">7, 2</string>
	<string name="game_fragment_board_x0y3">0, 3</string>
	<string name="game_fragment_board_x1y3">1, 3</string>
	<string name="game_fragment_board_x2y3">2, 3</string>
	<string name="game_fragment_board_x3y3">3, 3</string>
	<string name="game_fragment_board_x4y3">4, 3</string>
	<string name="game_fragment_board_x5y3">5, 3</string>
	<string name="game_fragment_board_x6y3">6, 3</string>
	<string name="game_fragment_board_x7y3">7, 3</string>
	<string name="game_fragment_board_x0y4">0, 4</string>
	<string name="game_fragment_board_x1y4">1, 4</string>
	<string name="game_fragment_board_x2y4">2, 4</string>
	<string name="game_fragment_board_x3y4">3, 4</string>
	<string name="game_fragment_board_x4y4">4, 4</string>
	<string name="game_fragment_board_x5y4">5, 4</string>
	<string name="game_fragment_board_x6y4">6, 4</string>
	<string name="game_fragment_board_x7y4">7, 4</string>
	<string name="game_fragment_board_x0y5">0, 5</string>
	<string name="game_fragment_board_x1y5">1, 5</string>
	<string name="game_fragment_board_x2y5">2, 5</string>
	<string name="game_fragment_board_x3y5">3, 5</string>
	<string name="game_fragment_board_x4y5">4, 5</string>
	<string name="game_fragment_board_x5y5">5, 5</string>
	<string name="game_fragment_board_x6y5">6, 5</string>
	<string name="game_fragment_board_x7y5">7, 5</string>
	<string name="game_fragment_board_x0y6">0, 6</string>
	<string name="game_fragment_board_x1y6">1, 6</string>
	<string name="game_fragment_board_x2y6">2, 6</string>
	<string name="game_fragment_board_x3y6">3, 6</string>
	<string name="game_fragment_board_x4y6">4, 6</string>
	<string name="game_fragment_board_x5y6">5, 6</string>
	<string name="game_fragment_board_x6y6">6, 6</string>
	<string name="game_fragment_board_x7y6">7, 6</string>
	<string name="game_fragment_board_x0y7">0, 7</string>
	<string name="game_fragment_board_x1y7">1, 7</string>
	<string name="game_fragment_board_x2y7">2, 7</string>
	<string name="game_fragment_board_x3y7">3, 7</string>
	<string name="game_fragment_board_x4y7">4, 7</string>
	<string name="game_fragment_board_x5y7">5, 7</string>
	<string name="game_fragment_board_x6y7">6, 7</string>
	<string name="game_fragment_board_x7y7">7, 7</string>
	<string name="game_over_activity_button_return">Return to Games List</string>
	<string name="game_over_activity_win_or_lose_lost">You lost the game! Better luck next time!</string>
	<string name="game_over_activity_win_or_lose_won">You won the game! What a champ!</string>
	<string name="game_over_activity_friend_profile_picture_description">Friend\'s Picture</string>
	<string name="game_over_activity_title">Game Over</string>
	<string name="game_settings">Game Settings</string>
	<string name="game_timestamp_1_week_ago">1 week ago</string>
	<string name="game_timestamp_2_weeks_ago">2 weeks ago</string>
	<string name="game_timestamp_more_than_2_weeks_ago">more than 2 weeks ago</string>
	<string name="game_timestamp_1_day_ago">1 day ago</string>
	<string name="game_timestamp_x_days_ago">%1$d days ago</string>
	<string name="game_timestamp_almost_a_week_ago">almost a week ago</string>
	<string name="game_timestamp_1_hour_ago">1 hour ago</string>
	<string name="game_timestamp_x_hours_ago">%1$d hours ago</string>
	<string name="game_timestamp_about_half_a_day_ago">about half a day ago</string>
	<string name="game_timestamp_almost_a_day_ago">almost a day ago</string>
	<string name="game_timestamp_1_minute_ago">1 minute ago</string>
	<string name="game_timestamp_x_minutes_ago">%1$d minutes ago</string>
	<string name="game_timestamp_almost_an_hour_ago">almost an hour ago</string>
	<string name="game_timestamp_just_now">just now</string>
	<string name="games_list_fragment_cancelled_text">Cancelled loading your Games List!</string>
	<string name="games_list_fragment_context_menu_text">Select an action for this game against %1$s.</string>
	<string name="games_list_fragment_context_menu_text_generic">Select an Action for this Game</string>
	<string name="games_list_fragment_getgames_error">Server was unable to respond with a list of games. Please try again later!</string>
	<string name="games_list_fragment_getgames_no_games">You have no active games!</string>
	<string name="games_list_fragment_getgames_response_error">Server was not found. Please try again later!</string>
	<string name="games_list_fragment_getgames_progressdialog_message">Retrieving all of your games&#8230;</string>
	<string name="games_list_fragment_getgames_progressdialog_title">Classy Games is working&#8230;</string>
	<string name="games_list_fragment_listview_item_picture_description">Friend\'s Picture</string>
	<string name="games_list_fragment_no_games">You have no games! Perhaps you should start a new game?</string>
	<string name="games_list_fragment_no_internet_connection">You don\'t have an Internet connection!</string>
	<string name="games_list_fragment_loading_text">Loading your Games List&#8230;</string>
	<string name="games_list_fragment_title">Games List</string>
	<string name="games_list_fragment_turn_theirs">Their Turn</string>
	<string name="games_list_fragment_turn_yours">Your Turn</string>
	<string name="generic_game_fragment_data_error">Error while trying to instantiate the game.</string>
	<string name="generic_game_fragment_loading_text">Loading game&#8230;</string>
	<string name="generic_game_fragment_title">Generic Game Fragment</string>
	<string name="login_with_facebook">Login with Facebook</string>
	<string name="logout">Logout</string>
	<string name="logout_fragment_description">Are you sure you want to logout of Facebook? You will need to login again to continue using Classy Games. You will keep on playing, right? After pressing this button, you will be returned to the Classy Games login screen.</string>
	<string name="logout_fragment_title">Logout of Classy Games</string>
	<string name="logout_of_facebook">Logout of Facebook</string>
	<string name="lost">lost</string>
	<string name="main_activity_loading_textview_text">Initializing settings and registering you with our servers&#8230;</string>
	<string name="main_activity_title">Classy Games</string>
	<string name="miscellaneous">Miscellaneous</string>
	<string name="miscellaneous_settings">Miscellaneous Settings</string>
	<string name="new_game">New Game</string>
	<string name="no">No</string>
	<string name="notification_game_over_text">Game with %1$s is now over!</string>
	<string name="notification_game_over_lose_text">You lost the game with %1$s!</string>
	<string name="notification_game_over_win_text">You won the game with %1$s!</string>
	<string name="notification_new_game_text">New game from %1$s!</string>
	<string name="notification_new_move_text">New move from %1$s!</string>
	<string name="notification_sent_some_class">Ol\' %1$s sent you some class.</string>
	<string name="notification_title">Classy Games</string>
	<string name="no_internet_connection">You don\'t have a connection to the Internet!</string>
	<string name="okay">Okay</string>
	<string name="piece_checkers_green_normal">Normal Green Piece</string>
	<string name="piece_checkers_green_king">Kinged Green Piece</string>
	<string name="piece_checkers_orange_normal">Normal Orange Piece</string>
	<string name="piece_checkers_orange_king">Kinged Orange Piece</string>
	<string name="refresh">Refresh</string>
	<string name="register_for_notifications">Register for Notifications</string>
	<string name="register_for_notifications_activity_description">Play Classy Games on more than one device? Our server can only send push notifications to one of your devices at a time. If you have a device that is getting those notifications but would rather that this device get those notifications intead, press the button below. You should probably ignore this if you only have Classy Games installed on one device.</string>
	<string name="register_for_notifications_activity_progressdialog_message">Register for Notifications</string>
	<string name="send_move">Send Move</string>
	<string name="skip_move">Skip Move</string>
	<string name="undo_move">Undo Move</string>
</resources>