<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:enabled="false"
		android:icon="@drawable/ab_send_move"
		android:id="@+id/generic_game_fragment_menu_send_move"
		android:showAsAction="ifRoom|withText"
		android:title="@string/send_move" />
	<item
		android:enabled="false"
		android:icon="@drawable/ab_undo_move"
		android:id="@+id/generic_game_fragment_menu_undo_move"
		android:showAsAction="ifRoom|withText"
		android:title="@string/undo_move" />
	<item
		android:icon="@drawable/ab_skip_move"
		android:id="@+id/generic_game_fragment_menu_skip_move"
		android:showAsAction="never|withText"
		android:title="@string/skip_move" />
	<item
		android:icon="@drawable/ab_forfeit_game"
		android:id="@+id/generic_game_fragment_menu_forfeit_game"
		android:showAsAction="never|withText"
		android:title="@string/forfeit_game" />
</menu>