<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	style="@style/ClassyGames">
	<ImageView
		android:adjustViewBounds="true"
		android:contentDescription="@string/app_name"
		android:gravity="center_vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:paddingLeft="4dip"
		android:paddingRight="4dip"
		android:paddingTop="48dip"
		android:src="@drawable/logo" />
	<Button
		android:id="@+id/confirm_game_activity_button_accept_game"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:text="@string/login_with_facebook"
		style="@style/button_pink" />
	<Button
		android:id="@+id/confirm_game_activity_button_reject_game"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:text="@string/login_with_facebook"
		style="@style/button_pink" />
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:lineSpacingExtra="6dip"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:paddingTop="16dip"
		android:text="@string/about_activity_about"
		android:textSize="17sp" />
</LinearLayout>