<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:paddingBottom="8dip"
	android:paddingLeft="4dip"
	android:paddingRight="4dip"
	android:paddingTop="8dip"
	style="@style/ClassyGames">
	<ImageView
		android:adjustViewBounds="true"
		android:contentDescription="@string/confirm_game_fragment_friend_profile_picture_description"
		android:id="@+id/confirm_game_fragment_friend_profile_picture"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:src="@drawable/empty_profile_picture_large" />
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">
		<TextView
			android:gravity="center"
			android:id="@+id/confirm_game_fragment_friend_name"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:textColor="@color/gray_darker"
			android:textIsSelectable="true"
			android:textSize="26sp" />
		<TextView
			android:gravity="center"
			android:id="@+id/confirm_game_fragment_description"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:paddingLeft="20dip"
			android:paddingRight="20dip"
			android:textColor="@color/gray_dark"
			android:textIsSelectable="false"
			style="@style/paragraph" />
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_marginTop="16dip"
			android:layout_width="match_parent"
			android:orientation="horizontal">
			<Button
				android:id="@+id/confirm_game_fragment_button_confirm"
				android:layout_height="wrap_content"
				android:layout_marginRight="2dip"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:text="@string/confirm_game_fragment_button_confirm"
				style="@style/button.blue" />
			<Button
				android:id="@+id/confirm_game_fragment_button_deny"
				android:layout_height="wrap_content"
				android:layout_marginLeft="2dip"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:text="@string/confirm_game_fragment_button_deny"
				style="@style/button.gray" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>